<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>socket_server</class>
 <widget class="QMainWindow" name="socket_server">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>625</width>
    <height>409</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>socket_server</string>
  </property>
  <widget class="QWidget" name="centralWidget">
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="0">
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
       <widget class="QLabel" name="label">
        <property name="text">
         <string>server_ip</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QLineEdit" name="le_server_ip">
        <property name="text">
         <string>192.168.3.13</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QLabel" name="label_2">
        <property name="text">
         <string>server_port</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QLineEdit" name="le_server_port">
        <property name="text">
         <string>9999</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QPushButton" name="btn_bind">
        <property name="text">
         <string>绑定</string>
        </property>
       </widget>
      </item>
     </layout>
    </item>
    <item row="1" column="0">
     <widget class="QTextEdit" name="te_server"/>
    </item>
    <item row="2" column="0">
     <layout class="QHBoxLayout" name="horizontalLayout_2">
      <item>
       <widget class="QLabel" name="label_4">
        <property name="text">
         <string>client_ip</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QLineEdit" name="le_client_ip"/>
      </item>
      <item>
       <widget class="QLabel" name="label_3">
        <property name="text">
         <string>client_port</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QLineEdit" name="le_client_port"/>
      </item>
      <item>
       <widget class="QPushButton" name="btn_send">
        <property name="text">
         <string>发送</string>
        </property>
       </widget>
      </item>
     </layout>
    </item>
    <item row="3" column="0">
     <widget class="QTextEdit" name="te_client"/>
    </item>
   </layout>
  </widget>
  <widget class="QMenuBar" name="menuBar">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>625</width>
     <height>28</height>
    </rect>
   </property>
  </widget>
  <widget class="QToolBar" name="mainToolBar">
   <attribute name="toolBarArea">
    <enum>TopToolBarArea</enum>
   </attribute>
   <attribute name="toolBarBreak">
    <bool>false</bool>
   </attribute>
  </widget>
  <widget class="QStatusBar" name="statusBar"/>
 </widget>
 <layoutdefault spacing="6" margin="11"/>
 <resources/>
 <connections/>
</ui>
